Fix small spacing issue with payments dashboard

--- a/public/css/payments.css
+++ b/public/css/payments.css
@@ -133,6 +133,10 @@
 //    float:right;
 }
 
+.payments-dashboard .changebilling .header {
+    margin-top: 32px;
+}
+
 .payments-dashboard .recurly .accepted_cards {
     right: 28px;
 }
